[package]
name = "rablet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusb = "0.9"
clap = { version = "4.0.32", features = ["derive"] }
dirs = "4.0.0"
log = "0.4"
pretty_env_logger = "0.3"
