[package]
name = "rablet"
version = "0.1.0"
edition = "2021"
description = "User-space tablet driver."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusb = "0.9"
clap = { version = "4.0.32", features = ["derive"] }
dirs = "4.0.0"
log = "0.4"
pretty_env_logger = "0.3"
sudo = "0.6.0"
futures = "0.3.25"
evdev = "0.12.1"
once_cell = "1.17.0"
keycode = { path = "../keycode-iter/keycode" }
strum = "0.24.1"
